Refactor: Remove Bryan Shea's resume PDF from assets
Refactor: Update BackgroundSelector component to use IconButton for closing

Refactor: Change job title in hero configuration from "Full Stack Software Engineer" to "Full Stack Developer"

Refactor: Enhance journey data structure to include certificate images for milestones

Refactor: Delete BackgroundsPage and its related index export

Refactor: Remove Hero.refactored component and its export

Refactor: Update Hero component to utilize configuration data and improve animations

Refactor: Enhance Journey section to include certificate images and improve layout

Refactor: Update Projects section to open project links in a new tab

Refactor: Remove unused user model and GraphQL type definitions

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,91 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud
+      Solutions
+    </title>
+    <meta
+      name="title"
+      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+    />
+    <meta
+      name="description"
+      content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences. Expert in TypeScript, React, GraphQL, MongoDB, AWS, and Docker."
+    />
+    <meta
+      name="keywords"
+      content="Bryan Shea, Full Stack Developer, TypeScript, React, GraphQL, MongoDB, AWS, Docker, Web Development, Cloud Solutions"
+    />
+    <meta name="author" content="Bryan Shea" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bryan-shea.dev/" />
+    <meta
+      property="og:title"
+      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
+    />
+    <meta property="og:image" content="/assets/bryan.webp" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bryan-shea.dev/" />
+    <meta
+      property="twitter:title"
+      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+    />
+    <meta
+      property="twitter:description"
+      content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
+    />
+    <meta property="twitter:image" content="/assets/bryan.webp" />
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Theme and Display -->
+    <meta name="theme-color" content="#1a202c" />
+    <meta name="color-scheme" content="dark light" />
+
+    <!-- Contact Information -->
+    <meta name="contact" content="bryan@webifyservices.com" />
+
+    <!-- Structured Data for Rich Snippets -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Bryan Shea",
+        "jobTitle": "Full Stack Developer",
+        "description": "Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences.",
+        "email": "bryan@webifyservices.com",
+        "url": "https://bryan-shea.dev/",
+        "image": "/assets/bryan.webp",
+        "knowsAbout": [
+          "TypeScript",
+          "React",
+          "GraphQL",
+          "MongoDB",
+          "AWS",
+          "Docker",
+          "Web Development",
+          "Cloud Solutions"
+        ],
+        "sameAs": [
+          "https://github.com/bryan-shea",
+          "https://linkedin.com/in/bryan-shea"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
