--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
@@ -35,7 +35,7 @@
       property="og:description"
       content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
     />
-    <meta property="og:image" content="/assets/bryan.webp" />
+    <meta property="og:image" content="./assets/bryan.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -48,7 +48,7 @@
       property="twitter:description"
       content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
     />
-    <meta property="twitter:image" content="/assets/bryan.webp" />
+    <meta property="twitter:image" content="./assets/bryan.webp" />
 
     <!-- Additional SEO -->
     <meta name="robots" content="index, follow" />
@@ -72,7 +72,7 @@
         "description": "Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences.",
         "email": "bryan@webifyservices.com",
         "url": "https://bryan-shea.dev/",
-        "image": "/assets/bryan.webp",
+        "image": "./assets/bryan.webp",
         "knowsAbout": [
           "TypeScript",
           "React",
@@ -91,7 +91,27 @@
     </script>
   </head>
   <body>
+    <script>
+      // Handle redirect from 404.html on GitHub Pages (SPA)
+      (function () {
+        var l = window.location;
+        if (l.search) {
+          var q = {};
+          l.search
+            .slice(1)
+            .split("&")
+            .forEach(function (v) {
+              var a = v.split("=");
+              q[a[0]] = a.slice(1).join("=");
+            });
+          if (q.p) {
+            sessionStorage.redirect = q.p + (q.q ? "?" + q.q : "") + l.hash;
+            window.location.replace(l.pathname.replace(/404\.html$/, ""));
+          }
+        }
+      })();
+    </script>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
