Refactor background components for improved aesthetics and accessibility; update project data for consistency and clarity

--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,11 @@
 
     <!-- Primary Meta Tags -->
     <title>
-      Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud
-      Solutions
+      Bryan Shea | Full Stack Developer
     </title>
     <meta
       name="title"
-      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+      content="Bryan Shea | Full Stack Developer"
     />
     <meta
       name="description"
