feat: Update favicon and web manifest; enhance hero configuration with new titles and descriptions

--- a/client/index.html
+++ b/client/index.html
@@ -2,24 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>
-      Bryan Shea | Full Stack Developer
-    </title>
-    <meta
-      name="title"
-      content="Bryan Shea | Full Stack Developer"
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+
+    <!-- Primary Meta Tags -->
+    <title>Bryan Shea | Full-Stack Software Engineer</title>
+    <meta name="title" content="Bryan Shea | Full-Stack Software Engineer" />
     <meta
       name="description"
       content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences. Expert in TypeScript, React, GraphQL, MongoDB, AWS, and Docker."
     />
     <meta
       name="keywords"
-      content="Bryan Shea, Full Stack Developer, TypeScript, React, GraphQL, MongoDB, AWS, Docker, Web Development, Cloud Solutions"
+      content="Bryan Shea, Full-Stack Software Engineer, TypeScript, React, GraphQL, MongoDB, AWS, Docker, Web Development, Cloud Solutions"
     />
     <meta name="author" content="Bryan Shea" />
 
@@ -28,11 +43,11 @@
     <meta property="og:url" content="https://bryan-shea.dev/" />
     <meta
       property="og:title"
-      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+      content="Bryan Shea - Full-Stack Software Engineer | Modern Web Applications & Cloud Solutions"
     />
     <meta
       property="og:description"
-      content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
+      content="Experienced full-stack software engineer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
     />
     <meta property="og:image" content="./assets/bryan.webp" />
 
@@ -41,11 +56,11 @@
     <meta property="twitter:url" content="https://bryan-shea.dev/" />
     <meta
       property="twitter:title"
-      content="Bryan Shea - Full Stack Developer | Modern Web Applications & Cloud Solutions"
+      content="Bryan Shea - Full-Stack Software Engineer | Modern Web Applications & Cloud Solutions"
     />
     <meta
       property="twitter:description"
-      content="Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
+      content="Experienced full-stack software engineer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences."
     />
     <meta property="twitter:image" content="./assets/bryan.webp" />
 
@@ -55,7 +70,7 @@
     <meta name="revisit-after" content="7 days" />
 
     <!-- Theme and Display -->
-    <meta name="theme-color" content="#1a202c" />
+    <meta name="theme-color" content="#6366f1" />
     <meta name="color-scheme" content="dark light" />
 
     <!-- Contact Information -->
@@ -67,8 +82,8 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Bryan Shea",
-        "jobTitle": "Full Stack Developer",
-        "description": "Experienced full-stack developer specializing in modern web applications and cloud-native solutions that drive business growth and exceptional user experiences.",
+        "jobTitle": "Full-Stack Software Engineer",
+        "description": "Full-stack software engineer building innovative web applications with React, TypeScript, Node.js, and GraphQL.",
         "email": "bryan@webifyservices.com",
         "url": "https://bryan-shea.dev/",
         "image": "./assets/bryan.webp",
